apps/vicegerent/langfuse/app-networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: langfuse-app
  namespace: langfuse
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: langfuse
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: langfuse
            app.kubernetes.io/name: langfuse-otel-collector
      toPorts:
        - ports:
            - port: '3000'
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: UDP
          rules:
            dns:
              - matchPattern: '*'
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: langfuse
